--- a/src/references.bib
+++ b/src/references.bib
@@ -120,3 +120,13 @@
   year          = {2014},
   month         = nov
 }
+@misc{qpe,
+  doi           = {10.48550/ARXIV.QUANT-PH/9511026},
+  url           = {https://arxiv.org/abs/quant-ph/9511026},
+  author        = {Kitaev,  A. Yu.},
+  keywords      = {Quantum Physics (quant-ph),  FOS: Physical sciences,  FOS: Physical sciences},
+  title         = {Quantum measurements and the Abelian Stabilizer Problem},
+  publisher     = {arXiv},
+  year          = {1995},
+  copyright     = {Assumed arXiv.org perpetual,  non-exclusive license to distribute this article for submissions made before January 2004}
+}
