--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -1382,9 +1382,9 @@ The last semplitifcation derives immediately from the fact that $e^{2 \pi i \the
 \end{equation*}
 Finally, the QFT written in this form can be actually implemented in a quantum circuit. \todo{da finire sonostufo}
 
-\subsection{Quantum Phase Estimation}
+\section{Quantum Phase Estimation}
 
-Let's see a very useful application of the QFT. By \cref{spectral thm} we know that the eigenvalues of a unitary operator are complex values of modulus 1. This means that any eigenvalue of a unitary operator can be ewritten as $e^{2 \pi i \varphi}$ for some real value $\varphi \in [0, 1]$ --- $\varphi$ being the \tit{phase} of the complex value, i.e. the angle w.r.t. the unitary circumference.
+Let's see a very useful application of the QFT introduced by \textcite{qpe} in 1995. By \cref{spectral thm} we know that the eigenvalues of a unitary operator are complex values of modulus 1. This means that any eigenvalue of a unitary operator can be ewritten as $e^{2 \pi i \varphi}$ for some real value $\varphi \in [0, 1]$ --- $\varphi$ being the \tit{phase} of the complex value, i.e. the angle w.r.t. the unitary circumference.
 
 Given a unitary operator $U$, and an eigenvalue $\lambda = e^{2 \pi i \varphi}$, can we determine $\varphi$? Let $u$ be an eigenvector associated to the unknown eigenvalue $\lambda$, i.e. $$U \ket u  = \lambda \ket u = e^{2 \pi i \varphi} \ket u$$ Now, let $U^{2^k}$ be the quantum gate that applies the $U$ operator $2^k$ times repeatedly, and define the following operator $$\mbox{C-} U^{2^k} = \ket 0 \bra 0 \otimes I + \ket 1 \bra 1 \otimes U^{2^k}$$ This operator is the \tbf{controlled} version of $U^{2^k}$, and it can easily be showed by plugging $\ket 0$ and $\ket 1$ as first argument --- alongside with some other quantum state $\ket \psi$
 \begin{equation*}
@@ -1422,7 +1422,7 @@ As we would expect, what happens is that the two outcomes we previously describe
 \end{equation*}
 Notice what happened here: $\ket 0$ and $\ket 1$ are parts of the first input, and $\ket u$ is the second input. In other words, by putting $\ket u$ as target input of the controlled gate, the target is \tbf{unchanged}, and the effect is seen on the control. We observe that this could not have been done with any other state $\ket \psi$ because the trick works precisely because $U$ becomes a scalar $e^{2 \pi i \varphi}$ when applied to $\ket u$, so it can be grouped as shown. The following quantum circuit computes the \tbf{Quantum Phase Estimation (QPE)} algorithm, and it uses precisely this trick.
 
-\centeredimage[The Quantum Phase Estimation circuit]{0.6}{../assets/qpe.png}
+\centeredimage[The Quantum Phase Estimation circuit.]{0.6}{../assets/qpe.png}
 
 The circuit is composed of the following elements:
 
@@ -1433,18 +1433,24 @@ The circuit is composed of the following elements:
     \item at the end we compute $\mbox{QFT}^\dag$ to the first $t$ registers
 \end{itemize}
 
-The interesting part of this circuit is that the last register remains unchanged throughout the whole computation, set precisely to $\ket u$, for the reason we described earlier. In fact, what happens is that what we are actually changing are the first $t$ qubits which will be chaned according to the $k$-th controlled gate we are using. Therefore, at the end the global state of the circuit will be $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{\ket 0 + e^{2 \pi i 2^{m - 1}} \ket 1}$$ Notice how we indexed the tensor product.
+The interesting part of this circuit is that the last register remains unchanged throughout the whole computation, set precisely to $\ket u$, for the reason we described earlier. In fact, what happens is that what we are actually changing are the first $t$ qubits which will be chaned according to the $k$-th controlled gate we are using. Therefore, at the end the global state of the circuit (without considering $\ket u$) will be $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{(\ket 0 + e^{2 \pi i 2^{m - 1}} \ket 1)}$$ Notice how we indexed the tensor product.
 
 Furthermore, we obseve that $\varphi \in [0, 1)$, because as we already metioned there is no need to consider the integral part of the phases. Thus, suppose that $\varphi$ can be written through $t$ bits $x_1, \ldots, x_t \in \B$ such that $$\varphi = 0.x_1 \ldots x_t$$ This implies that
 \begin{equation*}
     \begin{split}
         2^{m - 1} \cdot \varphi & = 2^{m - 1} \cdot 0.x_1 \ldots x_t \\ 
-                                & = \cdot x_1 \ldots x_{m - 1}. x_m \ldots x_t
+                                & = x_1 \ldots x_{m - 1}. x_m \ldots x_t
     \end{split}
 \end{equation*}
-Thus, since this is the exponent of $e^{2 \pi i}$, we already know that $$\exp(2 \pi i x_1 \ldots x_{m - 1} . x_m \ldots x_t) = \exp(2 \pi i 0. x_m \ldots x_t)$$ therefore the ternsor product can be rewritten as $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{\ket 0 + e^{2 \pi i 0.x_m \ldots x_t} \ket 1}$$ Very elegantly, this is exactly $\mbox{QFT} \ket x$ we computed in the previous section! Finally, if we place the inverse QFT --- namely $\mbox{QFT}^\dag$ --- at the end of the circuit we retrieve $\ket x$ itself, which is also the entire state of the system at this point. This means that if we measure each register at the end of the circuit we retrieve the bits of $x \in \B^n$ --- i.e. the bits that describe $\varphi$ --- with probability 1. In the end, we recovered the phase $\varphi$ of the eigenvalue associated to $\ket u$ with probability 1.
+Thus, since this is the exponent of $e^{2 \pi i}$, we already know that $$\exp(2 \pi i x_1 \ldots x_{m - 1} . x_m \ldots x_t) = \exp(2 \pi i 0. x_m \ldots x_t)$$ therefore the ternsor product can be rewritten as $$\dfrac{1}{\sqrt 2^n} \bigotimes_{m = 1}^{t}{(\ket 0 + e^{2 \pi i 0.x_m \ldots x_t} \ket 1)}$$ Very elegantly, this is exactly $\mbox{QFT} \ket x$ we computed in the previous section! Finally, if we place the inverse QFT --- namely $\mbox{QFT}^\dag$ --- at the end of the circuit we retrieve $\ket x$ itself, which is also the entire state of the system at this point (without considering $\ket u$). This means that if we measure each register at the end of the circuit we retrieve the bits of $x \in \B^n$ --- i.e. the bits that describe $\varphi$ --- with probability 1. In the end, we recovered the phase $\varphi$ of the eigenvalue associated to $\ket u$ with probability 1.
 
 As a final note, what if $\varphi$ cannot be expressed in exactly $t$ bits? It can be shown that $\varphi$ can be estimated with $n$ bits of precision through a QPE circuit composed of $n + \ceil{\log(2 + \tfrac{1}{2 \varepsilon})}$ qubits with a success probability at least $1 - \varepsilon$, for some $\varepsilon > 0$.
+
+\section{Shor's algorithm}
+
+TODO \todo{introduction}
+
+Consider the following unitary operator $U_x$ that computes as follows: $$\forall y \in \{0, 1\}^k \quad U_x \ket y = \soe{ll}{\ket{xy \bmod N} & y \le N \\ \ket y & y > N}$$
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
